[tool.poetry]
name = "lleassistant"
version = "0.1.0"
description = "AI Assistants for LLE Users"
authors = ["Alex Behlok"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
openai = "^0.28.1"
pyautogen = "^0.1.11"
pandas = "^2.1.1"
langchain = "^0.0.317"
python-docx = "^1.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
